--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 
 	<body>
 		<section class="jumbotron">
-			<div class="welcome-text">
+			<div class="text">
 			<h1>Piotr Wójcik</h1>
 			<p>Continuous learning Front-end Developer</p>
 			</div>
-			<button class="technology">Skills</button>
+			<button class="button button-technology">Skills</button>
 		</section>
 		<script type="js/javascript" src="js/script.js"></script>
 	</body>
