--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta charset="utf-8">
+		<meta charset="UTF-8">
 		<meta name="Author" content="Piotr Wójcik">
 		<meta name="description" content="Portfolio">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,6 +10,16 @@
 	</head>
 
 	<body>
+		<header>
+			<nav class="menu">
+				<ul>
+					<li><a href="#home">Home</a></li>
+					<li><a href="#home">Technology</a></li>
+					<li><a href="#home">Projects</a></li>
+				</ul>
+			</nav>
+		</header>
+
 		<section class="jumbotron">
 			<div class="text">
 			<h1>Piotr Wójcik</h1>
@@ -17,6 +27,8 @@
 			</div>
 			<button class="button button-technology">Skills</button>
 		</section>
+
+
 		<script type="js/javascript" src="js/script.js"></script>
 	</body>
 
