Portfolio text added

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<body>
 		<header>
 			<nav class="menu">
+				<div class="portfolio">Portfolio</div>
 				<ul>
 					<li><a href="#home">Home</a></li>
 					<li><a href="#home">Technology</a></li>
@@ -24,8 +25,8 @@
 			<div class="text">
 			<h1>Piotr Wójcik</h1>
 			<p>Continuous learning Front-end Developer</p>
-			</div>
 			<button class="button button-technology">Skills</button>
+			</div>
 		</section>
 
 
