--- a/index.html
+++ b/index.html
@@ -22,14 +22,17 @@
 		</header>
 
 		<section class="jumbotron">
-			<div class="text">
-			<h1>Piotr Wójcik</h1>
-			<p>Continuous learning Front-end Developer</p>
-			<button class="button button-technology">Skills</button>
+			<div id ="particles-js" class="particles">
+				<div class="text">
+				<h1>Piotr Wójcik</h1>
+				<p>Continuous learning Front-end Developer</p>
+				<button class="button button-technology">Skills</button>
+				</div>
 			</div>
 		</section>
 
-
+		<script src="js/particles.js"></script>
+		<script src="js/app.js"></script>
 		<script type="js/javascript" src="js/script.js"></script>
 	</body>
 
