Fixed menu added, technology section started

--- a/index.html
+++ b/index.html
@@ -21,15 +21,20 @@
 			</nav>
 		</header>
 
-		<section class="jumbotron">
-			<div id ="particles-js" class="particles">
-				<div class="text">
-				<h1>Piotr Wójcik</h1>
-				<p>Continuous learning Front-end Developer</p>
-				<button class="button button-technology">Skills</button>
+		<main>
+			<section class="jumbotron container">
+				<div id ="particles-js" class="particles">
+					<div class="text">
+					<h1>Piotr Wójcik</h1>
+					<p>Continuous learning Front-end Developer</p>
+					<button class="button button-technology">Skills</button>
+					</div>
 				</div>
-			</div>
-		</section>
+			</section>
+
+			<section class="technology">
+			</section>
+		</main>
 
 		<script src="js/particles.js"></script>
 		<script src="js/app.js"></script>
