--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<meta name="description" content="Portfolio">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 		<title>Portfolio</title>
 	</head>
 
@@ -15,14 +16,15 @@
 				<div class="portfolio">Portfolio</div>
 				<ul>
 					<li><a href="#home">Home</a></li>
-					<li><a href="#home">Technology</a></li>
-					<li><a href="#home">Projects</a></li>
+					<li><a href="#technology">Technology</a></li>
+					<li><a href="#projects">Projects</a></li>
+					<li><a href="Game">Game</a></li>
 				</ul>
 			</nav>
 		</header>
 
 		<main>
-			<section class="jumbotron container">
+			<section id="home" class="jumbotron container">
 				<div id ="particles-js" class="particles">
 					<div class="text">
 					<h1>Piotr Wójcik</h1>
@@ -32,7 +34,19 @@
 				</div>
 			</section>
 
-			<section class="technology">
+			<section id="technology" class="technology">
+			</section>
+
+			<section id="game" class="game container">
+				<h1>Are You bored at work?</h1>
+					<div class="container-title container">
+						<h1>Let's play the game</h1>
+						<span class="span-label rock">Rock</span>
+						<span class="span-label paper">Paper</span>
+						<span class="span-label scissors">Scissors</span>
+					</div>
+
+					<div class="choice"></div>
 			</section>
 		</main>
 
