--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
 					<li><a href="#home">Home</a></li>
 					<li><a href="#technology">Technology</a></li>
 					<li><a href="#projects">Projects</a></li>
-					<li><a href="Game">Game</a></li>
+					<li><a href="#game">Game</a></li>
 				</ul>
 			</nav>
 		</header>
 
 		<main>
-			<section id="home" class="jumbotron container">
-				<div id ="particles-js" class="particles">
+			<section id="home" class="jumbotron container flex-center">
+				<div id ="particles-js" class="particles flex-center">
 					<div class="text">
 					<h1>Piotr Wójcik</h1>
 					<p>Continuous learning Front-end Developer</p>
@@ -37,16 +37,21 @@
 			<section id="technology" class="technology">
 			</section>
 
+			<section id="projects" class="projects">
+			</section>
+
 			<section id="game" class="game container">
 				<h1>Are You bored at work?</h1>
-					<div class="container-title container">
+					<div class="container-title container flex-center">
 						<h1>Let's play the game</h1>
-						<span class="span-label rock">Rock</span>
-						<span class="span-label paper">Paper</span>
-						<span class="span-label scissors">Scissors</span>
+						<span class="span-label rock flex-center">Rock</span>
+						<span class="span-label paper flex-center">Paper</span>
+						<span class="span-label scissors flex-center">Scissors</span>
 					</div>
 
-					<div class="choice"></div>
+					<div id="newGameElement" class="new-game container flex-center">
+						<button class="button newGameButton">New Game</button>
+					</div>
 			</section>
 		</main>
 
