Background image added

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				</div>
 			</section>
 
-			<section id="technology" class="technology">
+			<section id="technology"  class="technology">
 			</section>
 
 			<section id="projects" class="projects">
@@ -49,8 +49,8 @@
 						<span class="span-label scissors flex-center">Scissors</span>
 					</div>
 
-					<div id="newGameElement" class="new-game container flex-center">
-						<button class="button newGameButton">New Game</button>
+					<div id="ja-newGameElement" class="new-game-container container flex-center">
+						<button id="js-newGameButton" class="button newGameButton">New Game</button>
 					</div>
 			</section>
 		</main>
