--- a/index.html
+++ b/index.html
@@ -53,6 +53,16 @@
 						<button id="js-newGameButton" class="button newGameButton">New Game</button>
 					</div>
 			</section>
+
+			<footer>
+				<div class="footer-container">
+					<div class="copyright">&copy;2017 Wójcik Company</div>
+					<div class="contact">piotr.krzysztof.wojcik@gmail.com</div>
+					<div class="phone">(0048) 602364742</div>
+					<div class="city">Warsaw</div>
+				</div>
+			</footer>
+
 		</main>
 
 		<script src="js/particles.js"></script>
