HTML small changes

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="description" content="Portfolio">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" type="text/css" href="css/style.css">
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<title>Portfolio</title>
 	</head>
 
@@ -52,6 +52,8 @@
 					<div id="ja-newGameElement" class="new-game-container container flex-center">
 						<button id="js-newGameButton" class="button newGameButton">New Game</button>
 					</div>
+
+
 			</section>
 
 			<footer>
@@ -65,6 +67,7 @@
 
 		</main>
 
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 		<script src="js/particles.js"></script>
 		<script src="js/app.js"></script>
 		<script type="js/javascript" src="js/script.js"></script>
