Function setGameElements completed

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 					<button id="js-playerPick_scissors" class="button pickButton activeButton"><i class="fa fa-hand-scissors-o" aria-hidden="true"></i>Scissors</button>
 				</div>
 
-				<div id="js-resultsTableElement" class="container <!--flex-center--> results">
+				<div id="js-resultsTableElement" class="container results">
 					<div class="row">
 						<div class="player">
 							<span id="js-playerPoints">0</span>
@@ -101,12 +101,11 @@
 					<div class="city">Warsaw</div>
 				</div>
 			</footer>
-
 		</main>
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+		<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> -->
 		<script src="js/particles.js"></script>
 		<script src="js/app.js"></script>
-		<script type="js/javascript" src="js/script.js"></script>
-		<script type="js/javascript" src="js/game.js"></script>
+		<script src="js/scripts.js"></script>
+		<script src="js/game.js"></script>
 	</body>
 </html>
