Player and computer pick completed

--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
 
 					<div class="row">
 						<div class="playerResult">
-							<span id="js-playerPick">Player result</span>
+							<span id="js-playerResult">Player result</span>
 						</div>
 						<div class="computerResult">
-							<span id="js-playerPick">Computer result</span>
+							<span id="js-computerResult">Computer result</span>
 						</div>
 					</div>
 				</div>
