--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				</div>
 			</section>
 
-			<section id="technology"  class="technology">
+			<section id="skills"  class="skills">
 			</section>
 
 			<section id="projects" class="projects">
