--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 			<section id="game" class="game container">
 				<h1>Are You bored at work?</h1>
-				<div class="container-title container flex-center">
+				<div id="js-containerTitle" class="container-title container flex-center">
 					<h1>Let's play the game</h1>
 					<span class="span-label rock flex-center">Rock</span>
 					<span class="span-label paper flex-center">Paper</span>
