--- a/index.html
+++ b/index.html
@@ -34,7 +34,18 @@
 				</div>
 			</section>
 
-			<section id="skills"  class="skills">
+			<section id="skills" class="skills">
+				<div class="flex-row">
+					<div class="gallery">
+						<div class="image1"><img src="images/HTML5.png"></div>
+						<div class="image2"><img src="images/css3.png"></div>
+						<div class="image3"><img src="images/JS.png"></div>
+					</div>
+				</div>
+				<div class="unknown">
+					<div class="unknown2">
+					</div>
+				</div>
 			</section>
 
 			<section id="projects" class="projects">
@@ -102,7 +113,6 @@
 				</div>
 			</footer>
 		</main>
-		<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> -->
 		<script src="js/particles.js"></script>
 		<script src="js/app.js"></script>
 		<script src="js/scripts.js"></script>
