--- a/index.html
+++ b/index.html
@@ -42,8 +42,16 @@
 						<div class="image3"><img src="images/JS.png"></div>
 					</div>
 				</div>
-				<div class="unknown">
-					<div class="unknown2">
+
+				<div class="progress-container">
+					<div class="progress">
+						<div class="html">30%</div>
+					</div>
+					<div class="progress">
+						<div class="css3">30%</div>
+					</div>
+					<div class="progress">
+						<div class="js">10%</div>
 					</div>
 				</div>
 			</section>
