Refactoring code HTML hover

--- a/index.html
+++ b/index.html
@@ -36,22 +36,25 @@
 
 			<section id="skills" class="skills">
 				<div class="flex-row">
-					<div class="gallery">
-						<div class="image1"><img src="images/HTML5.png"></div>
-						<div class="image2"><img src="images/css3.png"></div>
-						<div class="image3"><img src="images/JS.png"></div>
+					<div class="progress-container">
+						<div class="image1 image-class"><img src="images/HTML5.png"></div>
+						<div class="progress">
+								<div class="html">30%</div>
+						</div>
 					</div>
-				</div>
 
-				<div class="progress-container">
-					<div class="progress">
-						<div class="html">30%</div>
+					<div class="progress-container">
+						<div class="image2 image-class"><img src="images/css3.png"></div>
+						<div class="progress">
+							<div class="css3">30%</div>
+						</div>
 					</div>
-					<div class="progress">
-						<div class="css3">30%</div>
-					</div>
-					<div class="progress">
-						<div class="js">10%</div>
+
+					<div class="progress-container">
+						<div class="image3 image-class"><img src="images/JS.png"></div>
+						<div class="progress">
+							<div class="js">30%</div>
+						</div>
 					</div>
 				</div>
 			</section>
