Green changed to black first section

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 				</div>
 
 				<div class="career-goal">
-					<p>I would like to develop new products that will grow our business. And above all evolve into an expert in Front-End programming. My portfolio should give You more information about my skills.</p>
+					<p>"I would like to develop new products that will grow our business. And above all evolve into an expert in Front-End programming. My portfolio should give You more information about my skills."</p>
 				</div>
 
 			</section>
