--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 					<div class="progress-container">
 						<div class="image1 image-class"><img src="images/HTML5.png"></div>
 						<div class="progress">
-								<div class="html">30%</div>
+							<div class="html">30%</div>
 						</div>
 					</div>
 
@@ -64,7 +64,23 @@
 
 			</section>
 
-			<section id="projects" class="projects">
+			<section class="projects">
+				<div class="flex-row">
+					<div class="projects-images">
+						<div class="image image-class"><img src="http://placehold.it/400x400"></div>
+						<div class="github"><i class="fa fa-github-square" aria-hidden="true"></i></div>
+					</div>
+
+					<div class="projects-images">
+						<div class="image image-class"><img src="http://placehold.it/400x400"></div>
+						<div class="github"><i class="fa fa-github-square" aria-hidden="true"></i></div>
+					</div>
+
+					<div class="projects-images">
+						<div class="image image-class"><img src="http://placehold.it/400x400"></div>
+						<div class="github"><i class="fa fa-github-square" aria-hidden="true"></i></div>
+					</div>
+				</div>
 			</section>
 
 			<section id="game" class="game container">
