--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
 			</section>
 
-			<section class="projects">
+			<section id="projects" class="projects">
 				<div class="flex-row">
 					<div class="projects-images">
 						<div class="image image-class"><img src="http://placehold.it/400x400"></div>
