Section title and github buttons added

--- a/index.html
+++ b/index.html
@@ -61,24 +61,24 @@
 				<div class="career-goal">
 					<p>"I would like to develop new products that will grow our business. And above all evolve into an expert in Front-End programming. My portfolio should give You more information about my skills."</p>
 				</div>
-
 			</section>
 
 			<section id="projects" class="projects">
+				<div class="section-title"><h1>My Projects</h1></div>
 				<div class="flex-row">
 					<div class="projects-images">
 						<div class="image image-class"><img src="http://placehold.it/400x400"></div>
-						<div class="github"><i class="fa fa-github-square" aria-hidden="true"></i></div>
+						<button class="github"><i class="fa fa-github-square" aria-hidden="true"></i></button>
 					</div>
 
 					<div class="projects-images">
 						<div class="image image-class"><img src="http://placehold.it/400x400"></div>
-						<div class="github"><i class="fa fa-github-square" aria-hidden="true"></i></div>
+						<button class="github"><i class="fa fa-github-square" aria-hidden="true"></i></button>
 					</div>
 
 					<div class="projects-images">
 						<div class="image image-class"><img src="http://placehold.it/400x400"></div>
-						<div class="github"><i class="fa fa-github-square" aria-hidden="true"></i></div>
+						<button class="github"><i class="fa fa-github-square" aria-hidden="true"></i></button>
 					</div>
 				</div>
 			</section>
