Responsive media col added

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 					</div>
 
 					<div class="projects-images">
-						<div class="image image-class"><img src="http://placehold.it/400x400"></div>
+						<img src="http://placehold.it/400x400">
 						<button class="github"><i class="fa fa-github-square" aria-hidden="true"></i></button>
 					</div>
 
