Projects responsive under construction added links

--- a/index.html
+++ b/index.html
@@ -64,21 +64,21 @@
 			</section>
 
 			<section id="projects" class="projects">
-				<div class="section-title"><h1>My Projects</h1></div>
-				<div class="flex-row">
-					<div class="projects-images">
-						<div class="image image-class"><img src="http://placehold.it/400x400"></div>
-						<button class="github"><i class="fa fa-github-square" aria-hidden="true"></i></button>
-					</div>
-
-					<div class="projects-images">
+				<h1>My Projects</h1>
+				<div class="flex-row responsive-row">
+					<div class="projects-images col-s-12 col-m-6 col-l-4">
 						<img src="http://placehold.it/400x400">
-						<button class="github"><i class="fa fa-github-square" aria-hidden="true"></i></button>
+						<a href="https://github.com/majore87/Portfolio_website.git" target="_blank"><button class="github"><i class="fa fa-github-square" aria-hidden="true"></i></button></a>
 					</div>
 
-					<div class="projects-images">
-						<div class="image image-class"><img src="http://placehold.it/400x400"></div>
-						<button class="github"><i class="fa fa-github-square" aria-hidden="true"></i></button>
+					<div class="projects-images col-s-12 col-m-6 col-l-4">
+						<img src="http://placehold.it/400x400">
+						<a href="https://github.com/majore87/The_Journey_website.git" target="_blank"><button class="github"><i class="fa fa-github-square" aria-hidden="true"></i></button></a>
+					</div>
+
+					<div class="projects-images col-s-12 col-m-12 col-l-4">
+						<img src="http://placehold.it/400x400">
+						<a href="https://github.com/majore87/Company_website.git" target="_blank"><button class="github"><i class="fa fa-github-square" aria-hidden="true"></i></button></a>
 					</div>
 				</div>
 			</section>
