Fonts and titles of projects added, row horizontal centered

--- a/index.html
+++ b/index.html
@@ -66,17 +66,20 @@
 			<section id="projects" class="projects">
 				<h1>My Projects</h1>
 				<div class="flex-row responsive-row">
-					<div class="projects-images col-s-12 col-m-6 col-l-4">
+					<div class="projects-images portfolio col-s-12 col-m-6 col-l-4">
+						<h1>Portfolio</h1>
 						<img src="http://placehold.it/400x400">
 						<a href="https://github.com/majore87/Portfolio_website.git" target="_blank"><button class="github"><i class="fa fa-github-square" aria-hidden="true"></i></button></a>
 					</div>
 
-					<div class="projects-images col-s-12 col-m-6 col-l-4">
+					<div class="projects-images fire col-s-12 col-m-6 col-l-4">
+						<h1>The Fire</h1>
 						<img src="http://placehold.it/400x400">
 						<a href="https://github.com/majore87/The_Journey_website.git" target="_blank"><button class="github"><i class="fa fa-github-square" aria-hidden="true"></i></button></a>
 					</div>
 
-					<div class="projects-images col-s-12 col-m-12 col-l-4">
+					<div class="projects-images company col-s-12 col-m-12 col-l-4">
+						<h1>The Company</h1>
 						<img src="http://placehold.it/400x400">
 						<a href="https://github.com/majore87/Company_website.git" target="_blank"><button class="github"><i class="fa fa-github-square" aria-hidden="true"></i></button></a>
 					</div>
