--- a/index.html
+++ b/index.html
@@ -68,20 +68,20 @@
 				<div class="flex-row responsive-row">
 					<div class="projects-images portfolio col-s-12 col-m-6 col-l-4">
 						<h1>Portfolio</h1>
-						<img src="http://placehold.it/400x400">
+						<img src="images/portfolio.jpg" class="company-img">
 						<a href="https://github.com/majore87/Portfolio_website.git" target="_blank"><button class="github"><i class="fa fa-github-square" aria-hidden="true"></i></button></a>
 					</div>
 
 					<div class="projects-images fire col-s-12 col-m-6 col-l-4">
 						<h1>The Fire</h1>
-						<img src="http://placehold.it/400x400">
+						<img src="images/fire.jpg" class="fire-img">
 						<a href="https://github.com/majore87/The_Journey_website.git" target="_blank"><button class="github"><i class="fa fa-github-square" aria-hidden="true"></i></button></a>
 					</div>
 
 					<div class="projects-images company col-s-12 col-m-12 col-l-4">
 						<h1>The Company</h1>
-						<img src="http://placehold.it/400x400">
-						<a href="https://github.com/majore87/Company_website.git" target="_blank"><button class="github"><i class="fa fa-github-square" aria-hidden="true"></i></button></a>
+						<img src="images/company.jpg" class="company-img">
+						<button class="github"><i class="fa fa-github-square" aria-hidden="true"></i><a href="https://github.com/majore87/Company_website.git" target="_blank"></a></button>
 					</div>
 				</div>
 			</section>
