Skills for tablets completed

--- a/index.html
+++ b/index.html
@@ -36,42 +36,42 @@
 
 			<section id="skills" class="skills">
 				<div class="flex-row">
-					<div class="progress-container">
+					<div class="progress-container col-s-12 col-m-6 col-l-4">
 						<div class="image1 image-class"><img src="images/HTML5.png"></div>
 						<div class="progress">
-							<div class="html">30%</div>
+							<div class="html progress-bar">30%</div>
 						</div>
 					</div>
 
-					<div class="progress-container">
+					<div class="progress-container col-s-12 col-m-6 col-l-4">
 						<div class="image2 image-class"><img src="images/css3.png"></div>
 						<div class="progress">
-							<div class="css3">30%</div>
+							<div class="css3 progress-bar">30%</div>
 						</div>
 					</div>
 
-					<div class="progress-container">
-						<div class="image3 image-class"><img src="images/JS.png"></div>
+					<div class="progress-container col-s-12 col-m-6 col-l-4">
+						<div class="image3 image-class"><img src="images/JS.png" class="image-"></div>
 						<div class="progress">
-							<div class="js">10%</div>
+							<div class="js progress-bar">10%</div>
 						</div>
 					</div>
-				</div>
 
-				<div class="career-goal">
-					<p>"I would like to develop new products that will grow our business. And above all evolve into an expert in Front-End programming. My portfolio should give You more information about my skills."</p>
+					<div class="career-goal col-s-12 col-m-12 col-l-12">
+						<p>"I would like to develop new products that will grow our business. And above all evolve into an expert in Front-End programming. My portfolio should give You more information about my skills."</p>
+					</div>
 				</div>
 			</section>
 
 			<section id="projects" class="projects">
 				<div class="flex-row responsive-row">
-					<div class="projects-images portfolio col-s-12 col-m-6 col-l-4">
+					<div class="projects-images portfolio col-s-12 col-m-12 col-l-4">
 						<h1>Portfolio</h1>
 						<img src="images/portfolio.jpg" class="portfolio-img">
 						<a href="https://github.com/majore87/Portfolio_website.git" target="_blank"><button class="github portfolio-btn"><i class="fa fa-portfolio fa-github-square" aria-hidden="true"></i></button></a>
 					</div>
 
-					<div class="projects-images fire col-s-12 col-m-6 col-l-4">
+					<div class="projects-images fire col-s-12 col-m-12 col-l-4">
 						<h1>The Fire</h1>
 						<img src="images/fire.jpg" class="fire-img">
 						<a href="https://github.com/majore87/The_Journey_website.git" target="_blank"><button class="github fire-btn"><i class="fa fa-fire fa-github-square" aria-hidden="true"></i></button></a>
