Skills section responsive completed

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<meta name="Author" content="Piotr Wójcik">
+		<meta name="author" content="Piotr Wójcik">
 		<meta name="description" content="Portfolio">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" type="text/css" href="css/style.css">
@@ -34,7 +34,7 @@
 				</div>
 			</section>
 
-			<section id="skills" class="skills">
+			<section id="skills" class="skills border">
 				<div class="flex-row">
 					<div class="progress-container col-s-12 col-m-6 col-l-4">
 						<div class="image1 image-class"><img src="images/HTML5.png"></div>
@@ -63,7 +63,7 @@
 				</div>
 			</section>
 
-			<section id="projects" class="projects">
+			<section id="projects" class="projects border">
 				<div class="flex-row responsive-row">
 					<div class="projects-images portfolio col-s-12 col-m-12 col-l-4">
 						<h1>Portfolio</h1>
