Responsive menu almost completed

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 		<header>
 			<nav class="menu">
 				<div class="portfolio">Portfolio</div>
+				<label for="menu-button"><i class="fa fa-bars" aria-hidden="true"></i></label>
+        		<input type="checkbox" id="menu-button">
 				<ul>
 					<li><a href="#home">Home</a></li>
 					<li><a href="#skills">Skills</a></li>
