Game section responsive completed with footer

--- a/index.html
+++ b/index.html
@@ -108,33 +108,39 @@
 
 				<div id="js-resultsTableElement" class="container results">
 					<div class="row">
-						<div class="player">
+						<div class="player col-s-12 col-m-4 col-l-4">
 							<span id="js-playerPoints">0</span>
 							<span id="js-playerName">Player name</span>
 						</div>
-						<div class="vs">
+						<div class="vs col-s-12 col-m-4 col-l-4">
 							<span class="VS">VS</span>
 						</div>
-						<div class="computer">
+						<div class="computer col-s-12 col-m-4 col-l-4">
 							<span id="js-computerPoints">0</span>
 							<span>Computer</span>
 						</div>
 					</div>
 
 					<div class="row">
-						<div class="playerChoice">
+						<div class="playerChoice col-s-12 col-m-4 col-l-4">
 							<span id="js-playerPick">Player choice</span>
 						</div>
-						<div class="computerChoice">
+						<div class="col-s-12 col-m-4 col-l-4">
+							<span></span>
+						</div>
+						<div class="computerChoice col-s-12 col-m-4 col-l-4">
 							<span id="js-computerPick">Computer choice</span>
 						</div>
 					</div>
 
 					<div class="row">
-						<div class="playerResult">
+						<div class="playerResult col-s-12 col-m-4 col-l-4">
 							<span id="js-playerResult">Player result</span>
 						</div>
-						<div class="computerResult">
+						<div class="col-s-12 col-m-4 col-l-4">
+							<span></span>
+						</div>
+						<div class="computerResult col-s-12 col-m-4 col-l-4">
 							<span id="js-computerResult">Computer result</span>
 						</div>
 					</div>
@@ -142,10 +148,10 @@
 			</section>
 			<footer>
 				<div class="footer-container">
-					<div class="copyright">&copy;2017 Wójcik Company</div>
-					<div class="contact">piotr.krzysztof.wojcik@gmail.com</div>
-					<div class="phone">(0048) 602364742</div>
-					<div class="city">Warsaw</div>
+					<div class="copyright col-s-6 col-m-3 col-l-3">&copy;2017 Wójcik Company</div>
+					<div class="contact col-s-6 col-m-3 col-l-3">piotr.krzysztof.wojcik@gmail.com</div>
+					<div class="phone col-s-6 col-m-3 col-l-3">(0048) 602364742</div>
+					<div class="city col-s-6 col-m-3 col-l-3">Warsaw</div>
 				</div>
 			</footer>
 		</main>
