--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 			</section>
 
 			<section id="skills" class="skills border">
-				<div class="flex-row">
+				<div class="flex-row responsive-row">
 					<div class="progress-container col-s-12 col-m-6 col-l-4">
 						<div class="image1 image-class"><img src="images/HTML5.png"></div>
 						<div class="progress">
@@ -53,7 +53,7 @@
 					</div>
 
 					<div class="progress-container col-s-12 col-m-6 col-l-4">
-						<div class="image3 image-class"><img src="images/JS.png" class="image-"></div>
+						<div class="image3 image-class"><img src="images/JS.png"></div>
 						<div class="progress">
 							<div class="js progress-bar">10%</div>
 						</div>
@@ -107,7 +107,7 @@
 				</div>
 
 				<div id="js-resultsTableElement" class="container results">
-					<div class="row">
+					<div class="row responsive-row">
 						<div class="player col-s-12 col-m-4 col-l-4">
 							<span id="js-playerPoints">0</span>
 							<span id="js-playerName">Player name</span>
@@ -121,7 +121,7 @@
 						</div>
 					</div>
 
-					<div class="row">
+					<div class="row responsive-row">
 						<div class="playerChoice col-s-12 col-m-4 col-l-4">
 							<span id="js-playerPick">Player choice</span>
 						</div>
@@ -133,7 +133,7 @@
 						</div>
 					</div>
 
-					<div class="row">
+					<div class="row responsive-row">
 						<div class="playerResult col-s-12 col-m-4 col-l-4">
 							<span id="js-playerResult">Player result</span>
 						</div>
@@ -146,8 +146,9 @@
 					</div>
 				</div>
 			</section>
+
 			<footer>
-				<div class="footer-container">
+				<div class="footer-container responsive-row">
 					<div class="copyright col-s-6 col-m-3 col-l-3">&copy;2017 Wójcik Company</div>
 					<div class="contact col-s-6 col-m-3 col-l-3">piotr.krzysztof.wojcik@gmail.com</div>
 					<div class="phone col-s-6 col-m-3 col-l-3">(0048) 602364742</div>
@@ -155,6 +156,7 @@
 				</div>
 			</footer>
 		</main>
+
 		<script src="js/particles.js"></script>
 		<script src="js/app.js"></script>
 		<script src="js/scripts.js"></script>
