Links to projects added

--- a/index.html
+++ b/index.html
@@ -69,19 +69,19 @@
 				<div class="flex-row responsive-row">
 					<div class="projects-images portfolio col-s-12 col-m-12 col-l-4">
 						<h1>Portfolio</h1>
-						<img src="images/portfolio.jpg" class="portfolio-img">
+						<a href="http://wojcikportfolio.j.pl" target="_blank"><img src="images/portfolio.jpg" class="portfolio-img"></a>
 						<a href="https://github.com/majore87/Portfolio_website.git" target="_blank"><button class="github portfolio-btn"><i class="fa fa-portfolio fa-github-square" aria-hidden="true"></i></button></a>
 					</div>
 
 					<div class="projects-images fire col-s-12 col-m-12 col-l-4">
 						<h1>The Fire</h1>
-						<img src="images/fire.jpg" class="fire-img">
+						<a href="http://wojcikfire.j.pl" target="_blank"><img src="images/fire.jpg" class="fire-img"></a>
 						<a href="https://github.com/majore87/The_Journey_website.git" target="_blank"><button class="github fire-btn"><i class="fa fa-fire fa-github-square" aria-hidden="true"></i></button></a>
 					</div>
 
 					<div class="projects-images company col-s-12 col-m-12 col-l-4">
 						<h1>The Company</h1>
-						<img src="images/company.jpg" class="company-img">
+						<a href="http://wojcikcompany.j.pl" target="_blank"><img src="images/company.jpg" class="company-img"></a>
 						<a href="https://github.com/majore87/Company_website.git" target="_blank"><button class="github company-btn"><i class="fa fa-company fa-github-square" aria-hidden="true"></i></button></a>
 					</div>
 				</div>
